{
    "name": "ControllerSetup",
    "maps": [
        {
            "name": "Hoist",
            "id": "e97d2f46-8f73-48c7-bfc2-50388d50f353",
            "actions": [
                {
                    "name": "Cross",
                    "type": "Value",
                    "id": "256ec4a3-3938-4418-a23a-43b1f1f58cb1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "8b925241-c573-442b-b69d-e221b6e58a05",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Switcher",
                    "type": "Button",
                    "id": "bc6665a7-284b-4e3f-8d93-dd100f04aa4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Malfunction",
                    "type": "Button",
                    "id": "00a588de-71fa-4ac8-b21e-812f2df90d79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "7f5e7415-a909-41f7-8acc-9938a83b89b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd4c673a-30bb-44a3-be10-082bcbd593ac",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f05b7f8-126b-4339-98ef-26fa5e9c5b6b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c06a7e6a-cafb-436c-9924-9d2a4eeec15a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switcher",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f16fb53c-4f95-4cbe-8005-96f31beba7e2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Malfunction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d7202ac-2648-4abe-8dbc-90694b54fdf3",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Controls",
            "id": "50e1b1f3-47b4-4aff-aafb-7afb0332bd55",
            "actions": [
                {
                    "name": "Joystick 1",
                    "type": "Value",
                    "id": "92037f57-461b-466e-ba10-28e0a2266caf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Joystick 2",
                    "type": "Value",
                    "id": "765eb5ba-f369-40a4-8e04-c5cc0bfaf29c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotary 1",
                    "type": "Button",
                    "id": "faf6dbfd-725f-4c91-a93e-2bec38175bd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotary 2",
                    "type": "Button",
                    "id": "5c500264-4017-4c70-a01c-b632dca9cbb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotary 3",
                    "type": "Button",
                    "id": "f659587f-8bd2-412b-b96d-4df1609536b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotary 4",
                    "type": "Button",
                    "id": "b81950ac-51ac-4041-8ad5-5e3d54e8a87f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Left] PushButton 1",
                    "type": "Button",
                    "id": "8fedca32-059e-4efd-bc9e-3b3fe52c85f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Left] PushButton 2",
                    "type": "Button",
                    "id": "93d62822-7f62-4f29-bd53-9228798ded89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Left] PushButton 3",
                    "type": "Button",
                    "id": "706c5300-7bf2-4b5a-8bc3-1f293b6b6b23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Left] PushButton 4",
                    "type": "Button",
                    "id": "f7f74484-d71f-4b74-95ac-bbff2ac0691a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownShift",
                    "type": "Button",
                    "id": "01f90bc6-7116-49e3-a3f2-bd02432d4d65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpShift",
                    "type": "Button",
                    "id": "9b795d01-79bb-4e34-b3e4-5ff45f19ce2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Joystick1Button1",
                    "type": "Button",
                    "id": "be5ab2cb-fff6-4751-8fa0-29f36c358428",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Joystick1Button2",
                    "type": "Button",
                    "id": "b622d21f-19df-43fc-9788-c3ec331efaf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Joystick2Button1",
                    "type": "Button",
                    "id": "d2f299ce-c632-4c94-a07c-997182b0a811",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Joystick2Button2",
                    "type": "Button",
                    "id": "27483d3a-bc78-4648-8256-d1f7f4e0b269",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 1",
                    "type": "Button",
                    "id": "c117503a-6500-48fa-ba69-0693fa1ebaf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 2",
                    "type": "Button",
                    "id": "e798096a-f2c0-4717-be99-ce9ec9eeb37e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 3",
                    "type": "Button",
                    "id": "9f72b994-1b78-40de-a3ec-a93c39071ce1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 4",
                    "type": "Button",
                    "id": "b785038e-b509-48e2-a356-7bc61150e091",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 5",
                    "type": "Button",
                    "id": "c31aae26-549d-4794-a479-51ec674f5099",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 6",
                    "type": "Button",
                    "id": "0d41dd62-c4f0-446e-bbad-d87fc79d9c51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 7",
                    "type": "Button",
                    "id": "d59a490d-9abe-4e42-8933-940a333706aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "[Right] PushButton 8",
                    "type": "Button",
                    "id": "0e2d1bdf-6c36-4640-924d-a819d0954e88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8dd0cdb3-5e6f-426e-9e99-a30c9e1a8636",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba8920e3-5af7-4df6-983c-faf27a856992",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotary 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2df802ee-a2de-4776-a3b3-3ea83dba47d6",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Left] PushButton 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d0d5d87-e29d-4c81-9f18-5e5edd4ded0a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5d3b191-76ca-458c-89cb-8882a7d923ab",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43db3953-7fd4-4dbd-891a-2f10d4b43721",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotary 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9a73154-73ef-4e5d-8754-7dd335c935bc",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotary 3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9eb4a305-bca8-4cca-b264-8e4314743e40",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotary 4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60484c5d-1c45-4f52-aa4b-9ccf03dffc2c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bb6e82c-3e23-40c1-932d-5adc3b84b0e1",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Left] PushButton 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b663c45-bdc2-4acb-917f-17f4f6b1a9c4",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Left] PushButton 3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8a228d3-cae8-4294-a4eb-53425661962d",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Left] PushButton 4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48274621-09b2-4421-b860-88431b56468c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick1Button1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "874d3df2-d48a-40f7-8a11-ed1f6b7589ba",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick1Button2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2aab6c5e-ab54-4dff-9b93-f4cb90f7ee57",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick2Button1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71ac407e-e9a0-4505-95e7-2474342c38ff",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick2Button2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30b5a81f-ef60-45ff-8488-a55f04377b80",
                    "path": "<Keyboard>/9",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df7b86e3-2537-4526-b4aa-c746e64398e5",
                    "path": "<Keyboard>/2",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f752902e-b30c-4ccb-8c96-e57585d861f4",
                    "path": "<Keyboard>/3",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e84c50a6-60f5-4c16-aca7-b8d37ef86a21",
                    "path": "<Keyboard>/4",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61fc51da-a8ce-46ab-9cff-aec8b8d11472",
                    "path": "<Keyboard>/5",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b012ccfc-f01f-41cc-a763-3861de4c10f9",
                    "path": "<Keyboard>/6",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa9ca8cd-ca40-4e7a-8ebf-37db2ef92010",
                    "path": "<Keyboard>/7",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d88909e-cbcf-4762-8ed1-af54bc637e34",
                    "path": "<Keyboard>/8",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "[Right] PushButton 8",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Discharger",
            "id": "76c80db8-af1e-446e-8e0b-22ac84741ac1",
            "actions": [
                {
                    "name": "Joystick 1",
                    "type": "Value",
                    "id": "39624954-2cdc-4cef-8e37-3ed26475769f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Joystick 2",
                    "type": "Value",
                    "id": "90e6c3ed-d9dc-4639-8a22-b192167f0649",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3994e858-dc75-41a1-8e5f-151637d5f174",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6286aeb-7dd7-4eb6-a8e4-37d1a2b7e88f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}